# Canny_edge_detection_opencl

./: CMakeLists.txt  CMakeSettings.json  Canny.cpp  Canny.h  CannyEdgeDetection.cl  CannyEdgeDetection.cpp  CppProperties.json  OpenCLExercise3_Sobel.cl  OpenCLExercise3_Sobel.cpp  OpenCLExercise3_Sobel_DoubleTh.cpp  README.md  openclfunction.cl
Core/: Image.cpp
InputImages/: Lizard.pgm  tulips.pgm
src/: Algorithm_steps.txt  CannyEdgeDetection.cl  CannyEdgeDetection.cpp  OpenCLExercise3_Sobel.cpp  OpenCLExercise3_Sobel_DobleTh.cl  OpenCLExercise3_Sobel_DoubleTh.cpp
